add (icons): add attributed icons

--- a/gamev2.0.ipynb
+++ b/gamev2.0.ipynb
@@ -47,6 +47,18 @@
     "def all1(data, paths=None):\n",
     "    \n",
     "    \n",
+    "    # Ant0 icon created by Freepik - https://www.flaticon.com/free-icons/ant\n",
+    "    # Ant1 icon created by Smashicons - https://www.flaticon.com/free-icons/ant\n",
+    "    # Ant2 icon created by VectorPortal - https://www.flaticon.com/free-icons/ant\n",
+    "    # Enemy1 icon created by Smashicons - https://www.flaticon.com/free-icons/ant\n",
+    "    # Acid icon created by Vitaly Gorbachev - https://www.flaticon.com/free-icons/puddle\n",
+    "    # Food0 icon created by smashingstocks - https://www.flaticon.com/free-icons/bread\n",
+    "    # Food1 icon created by Freepik - https://www.flaticon.com/free-icons/fruit\n",
+    "    # Honeycomb icon created by imaginationlol - https://www.flaticon.com/free-icons/honey\n",
+    "    # Home icon created by vectorsmarket15 - https://www.flaticon.com/free-icons/architecture-and-city\n",
+    "    # Stone icon created by Freepik - https://www.flaticon.com/free-icons/granite\n",
+    "    # Mud icon created by Marz Gallery - https://www.flaticon.com/free-icons/mud\n",
+    "    \n",
     "    \n",
     "    home_img = mpimg.imread(\"icons/home.png\")\n",
     "    home = OffsetImage(home_img, zoom=0.08)\n",
